global container spacing fix

--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -96,7 +96,7 @@
 
 .feed-index-image {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   display: flex;
@@ -111,7 +111,7 @@
 
 .feed-index-title {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   background-color: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -135,7 +135,7 @@
 
 .feed-index-sharer {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   background-color: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -156,7 +156,7 @@
 
 .feed-index-avgrating {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   background-color: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
