--- a/app/assets/stylesheets/components/ratingsindex.scss
+++ b/app/assets/stylesheets/components/ratingsindex.scss
@@ -92,7 +92,7 @@
 
 .rating-index-image {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   display: flex;
@@ -107,7 +107,7 @@
 
 .rating-index-rating {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   background-color: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -127,7 +127,7 @@
 
 .rating-index-rater {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   background-color: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -170,7 +170,7 @@
 
 .rating-index-title {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   background-color: white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
