--- a/app/assets/stylesheets/components/snackindex.scss
+++ b/app/assets/stylesheets/components/snackindex.scss
@@ -88,7 +88,7 @@
 
 .snack-index-image {
   height: 140px;
-  width: 23%;
+  width: 25%;
   margin: 10px;
   margin-right: 0px;
   display: flex;
@@ -103,7 +103,7 @@
 }
 
 .snack-index-title {
-  min-width: 35.5%;
+  min-width: 37.5%;
   height: 140px;
   margin: 10px;
   background-color: white;
@@ -127,7 +127,7 @@
 }
 
 .snack-index-rating {
-  min-width: 35.5%;
+  min-width: 37.5%;
   height: 140px;
   margin: 10px;
   background-color: white;
