--- a/app/assets/stylesheets/components/snackratings.scss
+++ b/app/assets/stylesheets/components/snackratings.scss
@@ -36,7 +36,7 @@
 }
 
 .snack-rating-index-rater {
-  min-width: 44%;
+  width: 50%;
   height: 140px;
   margin: 10px;
   display: flex;
@@ -70,7 +70,7 @@
 }
 
 .snack-rating-index-rating {
-  min-width: 44%;
+  width: 50%;
   height: 140px;
   margin: 10px;
   display: flex;
