--- a/app/assets/stylesheets/components/snackshow.scss
+++ b/app/assets/stylesheets/components/snackshow.scss
@@ -48,7 +48,7 @@
 }
 
 .show-index-image {
-  width: 18%;
+  width: 20%;
   height: 140px;
   margin: 10px;
   display: flex;
@@ -65,7 +65,7 @@
 }
 
 .show-index-button {
-  width: 18%;
+  width: 20%;
   height: 140px;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -88,7 +88,7 @@
 }
 
 .show-index-title {
-  width: 18%;
+  width: 20%;
   height: 140px;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -111,7 +111,7 @@
 }
 
 .show-index-sharer {
-  width: 18%;
+  width: 20%;
   height: 140px;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -177,7 +177,7 @@
 
 
 .show-rating-form {
-  width: 18%;
+  width: 20%;
   height: 140px;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
